# kbt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
libs/device_query_revamped/: .cargo-checksum.json  .cargo_vcs_info.json  Cargo.toml
libs/device_query_revamped/src/: keymap.rs
libs/device_query_revamped/src/device_state/linux/: kernel_key.rs  mod.rs
libs/device_query_revamped/src/device_state/windows/: mod.rs
setup/: kbt.iss
src/: generic_backend.rs  key.rs  keyboard100_de.rs  keyboard100_de_unix.rs  keyboard60_de.rs  keyboard60_de_unix.rs  keyboard80_de.rs  keyboard80_de_unix.rs  main.rs  menu.rs  model.rs  view.rs
