[package]
name = "kbt"
version = "2.1.1"
authors = ["bloznelis <lukas.bloznelis@gmail.com>", "Harveyhase68 <office@predl.cc>"]
description = "Keyboard tester in terminal"
license = "MIT"
homepage = "https://github.com/bloznelis/kbt"
repository = "https://github.com/bloznelis/kbt"
edition = "2021"
keywords = ["terminal", "keyboard", "tester", "tui"]
readme = "README.md"

[build-dependencies]
winresource = "0.1"

[dependencies]
device_query_revamped = { path = "libs/device_query_revamped" }
ratatui = { version = "0.25.0", features = ["all-widgets"]}
crossterm = "0.27"
clap = { version = "4.4.7", features = ["derive"] }
simple-logging = "2.0.2"
log = "0.4.20"
